plugins {
    id 'java-library'
}

sourceCompatibility = 9
targetCompatibility = 9

ext.moduleName = 'org.consensusj.bitcoin.jsonrpc'

dependencies {
    api project(':consensusj-jsonrpc')
    api project(':cj-btc-json')

    testImplementation "org.apache.groovy:groovy:${groovyVersion}"
    testImplementation ("org.apache.groovy:groovy-json:${groovyVersion}") {
        transitive = false
    }

    testImplementation project(':cj-bitcoinj-dsl-gvy')                // Use Groovy extensions in tests
}

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes  'Implementation-Title': 'ConsensusJ Bitcoin JSON-RPC',
                'Automatic-Module-Name': moduleName,
                'Implementation-Version': archiveVersion.get()
    }
}

test {
    testLogging.showStandardStreams = true
    systemProperty 'java.util.logging.config.file', "${project.projectDir}/src/test/logging.properties"
    beforeTest { descriptor ->
        logger.lifecycle('    ' + descriptor.getName())
    }
}